Fix reference section title in README

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,7 @@
 ---
 output: github_document
 bibliography: "/home/kd/PARA/Notes/My Library.bib"
+refrence-section-title: Refrences
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
