--- a/README.Rmd
+++ b/README.Rmd
@@ -21,9 +21,9 @@ knitr::opts_chunk$set(
 [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.16909256.svg)](https://doi.org/10.5281/zenodo.16909256)
 <!-- badges: end -->
 
-This packege provides a convenient way to identify endmembers for the purpouse
-of provenance analysis, using Principle component analys [@A.D.G+24], and to
-group the components according to their distribution along the slope of the
+This package provides a convenient way to identify endmembers for the purpose
+of provenance analysis, using principle component analysis [@A.D.G+24], and to
+Group the components according to their distribution along the slope of the
 geochron [@E.E.Y+19].
 
 ## Installation
